<?xml version="1.0"?>
<package>
  <name>cslibs_utils</name>
  <version>1.0.0</version>
  <description>This package contains general utility classes</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">Sebastian Buck</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  
  <run_depend>tf</run_depend>
</package>
